--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/dates": "^7.17.0",
     "@mantine/form": "^7.17.0",
     "@mantine/hooks": "^7.17.0",
+    "@mantine/modals": "^7.17.2",
     "@mantine/notifications": "^7.17.0",
     "@tabler/icons-react": "^3.30.0",
     "axios": "^1.7.9",
